WP-5597: fix name spacing.

--- a/sass/conditionals/event/admission-event-detail.sass
+++ b/sass/conditionals/event/admission-event-detail.sass
@@ -152,6 +152,10 @@
     &:last-of-type
       margin-bottom: 0
 
+  // First name other not linked spacing
+  .field-name-field-first-name
+    margin-right: 5px
+
   // Registration deadline
   .field-name-field-date-time
     margin-bottom: 12px
